--- a/src/main/resources/META-INF/resources/index.html
+++ b/src/main/resources/META-INF/resources/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Quarkus Microservice</title>
+    <title>Secure Brandy Microservice</title>
     <style>
         body {
             color: #ffffff;
